@@ -204,6 +204,20 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
     [event]
         name=moveto
         [filter]
+            x,y,canrecruit,side=10,5,yes,1
+        [/filter]
+        [message]
+            speaker=unit
+            message="What am I supposed to be doing again?"
+        [/message]
+        [show_objectives]
+            side=1
+        [/show_objectives]
+    [/event]
+
+    [event]
+        name=moveto
+        [filter]
             x=11
             y=6
             side=1
